# rocket_vR

./: CONTRIBUTING.md  Cargo.toml  README.md  build.rs  build_usb_check_v4.txt  build_usb_check_v5.txt  build_usb_check_v6.txt  last_build_attempt.txt  memory.x  rocket_build_final.txt  rocket_build_verify.txt  rocket_build_verify_v2.txt
.agents/rules/: powershell.md  system-engineering.md
.cargo/: config.toml
.github/workflows/: rust.yml
base-station/: Cargo.toml  README.md  memory.x
base-station/src/: hardware.rs  main.rs
docs/: architecture.md  hardware.md  roadmap.md  sitl_guide.md  troubleshooting.md
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs
proto-rocket/: Cargo.toml  build.rs  memory.x
proto-rocket/src/: main.rs
rocket/: Cargo.toml  build_output.txt
rocket-core/: Cargo.toml  README.md
rocket-core/src/: blackboard.rs  datacells.rs  health_types.rs  lib.rs  log.rs  macros.rs  radio_types.rs  state_machine.rs  types.rs  utilization.rs
rocket-core/src/gps/: mod.rs  parser.rs  types.rs  vertical_kalman.rs
rocket-core/src/gps/parser/: tests.rs
rocket-core/src/imu/: mod.rs  types.rs
rocket-core/src/state_machine/: tests.rs
rocket-drivers/: Cargo.toml  README.md
rocket-drivers/src/: channels.rs  gps.rs  hardware.rs  imu.rs  lib.rs  macros.rs  radio.rs  sd_card.rs  usb.rs  wifi.rs
rocket-drivers/src/imu/: adxl375.rs  lis3mdl.rs  lism6dsox.rs
rocket-drivers/src/radio/: rfm95.rs
rocket-drivers/src/sd_card/: logger.rs
rocket-os/: Cargo.toml  README.md
rocket-os/src/: health.rs  instrumented_executor.rs  lib.rs
rocket-os/src/health/: stack.rs  utilization.rs
rocket-sitl-ksp/: Cargo.toml  README.md
rocket-sitl-ksp/src/: agent.rs  main.rs
rocket/src/: channels.rs  datacells.rs  gps.rs  hardware.rs  health.rs  imu.rs  instrumented_executor.rs  macros.rs  main.rs  panic.rs  radio.rs  sd_card.rs  state_machine.rs  usb.rs  utilization.rs  wifi.rs
rocket/src/gps/: parser.rs  types.rs  vertical_kalman.rs
rocket/src/health/: mod.rs  monitor.rs  stack.rs  utilization.rs
rocket/src/imu/: adxl375.rs  lis3mdl.rs  lism6dsox.rs  mod.rs  types.rs
rocket/src/radio/: rfm95.rs
rocket/src/sd_card/: logger.rs
scripts/: renode-runner.ps1
src/: instrumented_executor.rs  macros.rs  main.rs  usb.rs  utilization.rs
tests/renode/: canary.resc  pico2.repl  rocket.resc
tests/renode-canary/: Cargo.toml  build.rs  memory.x
tests/renode-canary/src/: main.rs
tests/renode/antmicro_pico2/: hello_world-asciinema  hello_world-profile  hello_world.elf  hello_world.repl  hello_world.resc
