[workspace]
members = [
    "rocket",
    "rocket-core",
    "proc-macros",
    "rocket-sitl-ksp",
    "base-station",
    "tests/renode-canary",
]
resolver = "2"

# Use ths s optimization for speed optimization. 

[profile.release]
debug = 2
lto = true
opt-level = 's'

[profile.dev]
debug = 2
lto = true
opt-level = 's'
