[workspace]
members = [
    "rocket",
    "proto-rocket",
    "rocket-core",
    "proc-macros",
    "rocket-sitl-ksp",
    "base-station",
]
resolver = "2"

# Use ths s optimization for speed optimization. 

[profile.release]
debug = 2
lto = true
opt-level = 's'

[profile.dev]
debug = 2
lto = true
opt-level = 's'
