[package]
name = "proc-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
# syn: for parsing the Rust code into a syntax tree
syn = { version = "2.0", features = ["full"] }
# quote: for turning the syntax tree back into source code
quote = "1.0"
# proc-macro2: shim layer for proc-macro
proc-macro2 = "1.0"
