[package]
name = "rocket-core"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = { version = "1.0.1", optional = true }
log = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
heapless = "0.8"

[features]
default = []
defmt = ["dep:defmt"]
