[package]
name = "rocket-core"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = { version = "1.0.1", optional = true }
log = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
heapless = { version = "0.8", features = ["defmt-03"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
portable-atomic = { version = "1.5", features = ["critical-section"] }
proc-macros = { path = "../proc-macros" }

[target.'cfg(not(target_arch = "arm"))'.dependencies]
embassy-time = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy", features = [
    "std",
    "generic-queue-8",
] }

[target.'cfg(target_arch = "arm")'.dependencies]
embassy-time = { git = "https://github.com/embassy-rs/embassy" }

[features]
default = []
defmt = ["dep:defmt", "heapless/defmt-03"]

[dev-dependencies]
critical-section = { version = "1.1", features = ["std"] }
