[package]
name = "rocket-drivers"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-rp = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "time-driver",
    "critical-section-impl",
    "unstable-pac",
    "binary-info",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
embedded-hal-async = "1.0"
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
embedded-hal-bus = { version = "0.1", features = ["async"] }
static_cell = "2.1"
defmt = "1.0.1"
defmt-rtt = "1.0.1"
proc-macros = { path = "../proc-macros" }
rocket-core = { path = "../rocket-core", features = ["defmt"] }
log = "0.4"
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
cyw43 = { git = "https://github.com/embassy-rs/embassy" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy" }
heapless = { version = "0.8", features = ["defmt-03"] }
postcard = { version = "1.0.8", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-sdmmc = "0.8"
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy" }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy" }

[features]
rp2040 = ["embassy-rp/rp2040"]
rp2350 = ["embassy-rp/rp235xa"]
debug-imu = []
