[package]
name = "rocket-sitl-ksp"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket-core = { path = "../rocket-core", features = ["defmt"] }
krpc-client = "0.6"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = [
    "arch-std",
    "executor-thread",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = [
    "std",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
critical-section = { version = "1.1", features = ["std"] }
